@@ -1722,17 +1722,18 @@ accopWithAop (char *accop, asmop *aop, int loffset)
   if (aop->type == AOP_DUMMY)
     return;
 
-  if (loffset >= aop->size)
+  if (aop->type == AOP_REG)
     {
-      emitcode (accop, "#0");
-      regalloc_dry_run_cost += 2;
-    }
-  else if (aop->type == AOP_REG)
+  if (loffset < aop->size)
     {
       pushReg (aop->aopu.aop_reg[loffset], false);
       emitcode (accop, "1,s");
       regalloc_dry_run_cost += 3;
       pullNull (1);
+    } else {
+      emitcode (accop, "#0");
+      regalloc_dry_run_cost += 2;
+    }
     }
   else
     {
